# xrom-scripts-v2

./: .gitignore  README.md  TECHNICAL.md  pyproject.toml
src/xrom_scripts/: __init__.py  cli.py  config.py  logger.py
src/xrom_scripts/infrastructure/: __init__.py  db_client.py  ssh_client.py  ssh_tunnel.py
src/xrom_scripts/templates/base/: .env.example  .gitignore  README.md  pyproject.toml.jinja
src/xrom_scripts/templates/base/src/{{project_name}}/: __init__.py  main.py
